[project]
name = "comfyui_jps-nodes"
description = "Nodes: Various nodes to handle SDXL Resolutions, SDXL Basic Settings, IP Adapter Settings, Revision Settings, SDXL Prompt Styler, Crop Image to Square, Crop Image to Target Size, Get Date-Time String, Resolution Multiply, Largest Integer, 5-to-1 Switches for Integer, Images, Latents, Conditioning, Model, VAE, ControlNet"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/JPS-GER/ComfyUI_JPS-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_JPS-Nodes"
Icon = ""
